@@ -1,8 +1,9 @@
 0.4
     * Add Boots + Power = sprint launch flying
     * Add Chestplate + Infinity = god mode
-    * Add Boots + Flame = set ground on fire
-    * Fix Hoe + Aqua Affinity = auto-hydrate, now can make flowing water stationary
+    * Add Boots + Flame = firewalker (set ground on fire)
+    * Improve Hoe + Aqua Affinity = auto-hydrate, now can make flowing water stationary
+    * Improve Sword + Flame
 
 2012-02-10  0.3
     * Add Bow + Knockback = pierce blocks
